objects/Credit_Note_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Summe</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CREATEDDATE_old__c</fullName>
        <label>CREATEDDATE_old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Zahlungsinhalt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Note__c</fullName>
        <label>Gutschrift</label>
        <referenceTo>Credit_Note__c</referenceTo>
        <relationshipLabel>Zahlungsausgänge</relationshipLabel>
        <relationshipName>Credit_Note_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Datum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_old__c</fullName>
        <label>ID_old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Methode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Methods</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Zahlungsausgang_ID__c</fullName>
        <label>Old Zahlungsausgang ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Credit_Note__r.Opportunity_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Type__c</fullName>
        <label>Zahlungsempfänger</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Sender_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <label>Bezeichnung Zahlungsempfänger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>Credit_Note__r.Claim__r.Opportunity__r.Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaktion</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Zahlungsausgänge (Gutschrift)</relationshipLabel>
        <relationshipName>Credit_Note_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZahlausgImpID__c</fullName>
        <externalId>true</externalId>
        <label>ZahlausgImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zahlungsausgang</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zahlungsausgänge</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>